k8s-setup/ingress/basic/host-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
  # labels:
  #   app.kubernetes.io/name: myingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingressClassName: "nginx"
spec:
  ingressClassName: nginx 
  tls:
  - hosts: 
    - nginx-k8s-demo.marinet.shop
    - reactjs-k8s-demo.marinet.shop
    secretName: nginx-k8s-secretname
  rules:
  - host: nginx-k8s-demo.marinet.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
              
  - host: reactjs-k8s-demo.marinet.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reactjs-svc
            port: 
              number: 80
